[package]
name = "wurth-calypso"
authors = [
    "The Team Arrow Racing Association firmware development team",
    "Liam Kinne <liam@kinne.io>",
]
description = "Driver for the Würth Elektronik Calypso Wi-Fi radio module."
categories = ["embedded", "no-std"]
repository = "https://gitlab.com/team-arrow-racing/wurth-calypso"
documentation = "https://docs.rs/wurth-calypso"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "wurth_calypso"

[dependencies]
atat = { version = "0.20.0", features = ["async"] }
embedded-hal = "0.2.7"
fugit = "0.3.6"
heapless = "0.7.16"

[features]
defmt = ["at-commands/defmt", "fugit/defmt", "heapless/defmt"]
