[package]
name = "wurth-calypso"
authors = [
    "The Team Arrow Racing Association firmware development team",
    "Liam Kinne <liam@kinne.io>",
]
description = "Driver for the Würth Elektronik Calypso Wi-Fi radio module."
categories = ["embedded", "no-std"]
repository = "https://gitlab.com/team-arrow-racing/wurth-calypso"
documentation = "https://docs.rs/wurth-calypso"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "wurth_calypso"

[dependencies]
atat = { version = "0.20.0", features = ["async", "log"] }
embedded-hal = "0.2.7"
heapless = "0.7.16"


[dev-dependencies]
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-serial = "5.4.4"
embedded-io = { version = "0.6", features = ["std"] }
embedded-io-adapters = { version = "0.6", features = ["tokio-1"] }
embassy-time = { version = "0.2", features = ["std", "generic-queue"] }
env_logger = "0.10.1"

[features]
defmt = [ "heapless/defmt"]
